# slotly-server

./: .env  README.md  main.py  pyproject.toml  requirements.txt  run.bat  start.py
db/: db.py
src/server/: create_tables.py  database.py  main.py
src/server/models/: __init__.py  booking.py  booking_profile.py  event_type.py  user.py
src/server/public_booking/: routes_public_booking.py
src/server/routes/: auth.py  availability.py  booking.py  booking_profile.py  calendar.py  event_type.py  user.py
src/server/services/: booking_profile_service.py  booking_service.py  event_type_service.py  user_service.py
src/server/utils/: crypto.py  locks.py
