[project]
name = "server"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
authors = [
    { name = "UnnatiSamaiyar", email = "unnatisamaiyar02@gmail.com" }
]
requires-python = ">=3.13"
dependencies = [
    "alembic>=1.17.1",
    "celery>=5.5.3",
    "fastapi>=0.121.0",
    "passlib[bcrypt]>=1.7.4",
    "psycopg2>=2.9.11",
    "pydantic-settings>=2.11.0",
    "python-dotenv>=1.2.1",
    "redis>=7.0.1",
    "sqlalchemy>=2.0.44",
    "uvicorn[standard]>=0.38.0",
]

[project.scripts]
server = "server:main"

[build-system]
requires = ["uv_build>=0.9.7,<0.10.0"]
build-backend = "uv_build"
